{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 96,
  "lineage": "ab945e04-5a45-13c2-8100-cc67525e64ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024274c55090653b8",
            "association_id": "eipassoc-0aa50466b26b9dbb0",
            "domain": "vpc",
            "id": "eipalloc-024274c55090653b8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b37725d2ab9a93e7",
            "private_dns": "ip-10-0-4-107.us-east-2.compute.internal",
            "private_ip": "10.0.4.107",
            "public_dns": "ec2-3-140-45-32.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.45.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:846265604884:instance/i-048600b50918f446b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048600b50918f446b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bishop-KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe487e5b4bbd52ce",
            "private_dns": "ip-172-31-3-76.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.76",
            "public_dns": "ec2-3-133-157-34.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.157.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004ba195bef9be1e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c7b086fb7bcf5e7",
            "tags": {
              "Name": "Test-Instance"
            },
            "tags_all": {
              "Name": "Test-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caede2d148a6cc72"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:internet-gateway/igw-04637bf621c6e0e0d",
            "id": "igw-04637bf621c6e0e0d",
            "owner_id": "846265604884",
            "tags": {
              "Name": "Public-GW"
            },
            "tags_all": {
              "Name": "Public-GW"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024274c55090653b8",
            "connectivity_type": "public",
            "id": "nat-0b838d68d2b1fdff3",
            "network_interface_id": "eni-0b37725d2ab9a93e7",
            "private_ip": "10.0.4.107",
            "public_ip": "3.140.45.32",
            "subnet_id": "subnet-000a34d5891f121bc",
            "tags": {
              "Name": "NAT-1"
            },
            "tags_all": {
              "Name": "NAT-1"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.privateubnet1",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:route-table/rtb-0e9812e544491a960",
            "id": "rtb-0e9812e544491a960",
            "owner_id": "846265604884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b838d68d2b1fdff3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat-Route"
            },
            "tags_all": {
              "Name": "Nat-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.private-nat",
            "aws_subnet.privateubnet1",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:route-table/rtb-07d63125986549138",
            "id": "rtb-07d63125986549138",
            "owner_id": "846265604884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04637bf621c6e0e0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-T"
            },
            "tags_all": {
              "Name": "Route-T"
            },
            "timeouts": null,
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:route-table/rtb-0193bfd09958721fa",
            "id": "rtb-0193bfd09958721fa",
            "owner_id": "846265604884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04637bf621c6e0e0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-T2"
            },
            "tags_all": {
              "Name": "Route-T2"
            },
            "timeouts": null,
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtaaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:route-table/rtb-029fc5618d436317a",
            "id": "rtb-029fc5618d436317a",
            "owner_id": "846265604884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04637bf621c6e0e0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-T3"
            },
            "tags_all": {
              "Name": "Route-T3"
            },
            "timeouts": null,
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076d3ea6ac15e9043",
            "route_table_id": "rtb-0e9812e544491a960",
            "subnet_id": "subnet-000a34d5891f121bc"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.private-nat",
            "aws_route_table.private_rt",
            "aws_subnet.privateubnet1",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0558f54e032a3ed62",
            "route_table_id": "rtb-0e9812e544491a960",
            "subnet_id": "subnet-038cd48657a859d78"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.private-nat",
            "aws_route_table.private_rt",
            "aws_subnet.privatesubnet2",
            "aws_subnet.privateubnet1",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd06542c99ddf319",
            "route_table_id": "rtb-0e9812e544491a960",
            "subnet_id": "subnet-0e0ca7999ae0cd78a"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.private-nat",
            "aws_route_table.private_rt",
            "aws_subnet.privatesubnet3",
            "aws_subnet.privateubnet1",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c00b90bbe7faefc",
            "route_table_id": "rtb-029fc5618d436317a",
            "subnet_id": "subnet-0327e5a5aeacecdf1"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.rtaaa",
            "aws_subnet.publicsubnet1",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba342b406008463",
            "route_table_id": "rtb-029fc5618d436317a",
            "subnet_id": "subnet-0066123b6413fd347"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.rtaaa",
            "aws_subnet.publicsubnet2",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a2bb55df2ca8f1",
            "route_table_id": "rtb-029fc5618d436317a",
            "subnet_id": "subnet-0eed11614d76fdb42"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.rtaaa",
            "aws_subnet.publicsubnet3",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-038cd48657a859d78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038cd48657a859d78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Privatesub-5"
            },
            "tags_all": {
              "name": "Privatesub-5"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-0e0ca7999ae0cd78a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0ca7999ae0cd78a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Privatesub-6"
            },
            "tags_all": {
              "name": "Privatesub-6"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-000a34d5891f121bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000a34d5891f121bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Privatesub-4"
            },
            "tags_all": {
              "name": "Privatesub-4"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-0327e5a5aeacecdf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0327e5a5aeacecdf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Publicsub-1"
            },
            "tags_all": {
              "name": "Publicsub-1"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-0066123b6413fd347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0066123b6413fd347",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Publicsub-2"
            },
            "tags_all": {
              "name": "Publicsub-2"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-0eed11614d76fdb42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eed11614d76fdb42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Publicsub-3"
            },
            "tags_all": {
              "name": "Publicsub-3"
            },
            "vpc_id": "vpc-060ccb3b5051d1a40"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:vpc/vpc-060ccb3b5051d1a40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4798b7a54187a56",
            "default_route_table_id": "rtb-069cf9b4f774fb6a5",
            "default_security_group_id": "sg-09dca8069b1d8a56b",
            "dhcp_options_id": "dopt-019a13dcf660e0184",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060ccb3b5051d1a40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069cf9b4f774fb6a5",
            "owner_id": "846265604884",
            "tags": {
              "name": "MyTerraformVPC"
            },
            "tags_all": {
              "name": "MyTerraformVPC"
            }
          }
        }
      ]
    }
  ]
}